--- a/archive.html
+++ b/archive.html
@@ -1,8 +1,9 @@
 ---
 layout: page
 title : Archive
-header : Post Archive
+header : Post Archives
 group: navigation
+description: Archievs
 ---
 {% include JB/setup %}
 
