--- a/categories.html
+++ b/categories.html
@@ -3,6 +3,7 @@ layout: page
 title: Categories
 header: Posts By Category
 group: navigation
+description: samuel bīn YÈ 日志分类
 ---
 {% include JB/setup %}
 
