--- a/tags.html
+++ b/tags.html
@@ -3,9 +3,9 @@ layout: page
 title: Tags
 header: Posts By Tag
 group: navigation
+description: samuel bīn YÈ 日志关键词汇总
 ---
 {% include JB/setup %}
-
 <ul class="tag_box inline">
   {% assign tags_list = site.tags %}  
   {% include JB/tags_list %}
