--- a/archive.html
+++ b/archive.html
@@ -6,5 +6,12 @@ group: navigation
 description: Archievs
 ---
 {% include JB/setup %}
+{% for post in list limit 10 %}
+{% if forloop.index == 1 %} data-loaded="1"{% endif %}>
+	<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+	{% if forloop.index == 1 and preview %}
+		{{content}}
+	{% endif %}
+{% endfor %}
 {% assign posts_collate = site.posts %}
 {% include JB/posts_collate %}
