add navigator page

--- a/start.htm
+++ b/start.htm
@@ -1,8 +1,3 @@
----
-group: navigation
-title: Navigator - Ye Bin 的南十字星页面
-description: 适用于社区医生，全科医生，和护士的导航页面
----
 
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -14,7 +9,7 @@ description: 适用于社区医生，全科医生，和护士的导航页面
 	<link rel="shortcut icon" href="http://start.olivida.com/static/img/favicon.ico" />
 </head>
 <body>
-	<div id="Root"><div style="float: right"><a href="http://www.yebin.info/" title="首页"><strong>Home</strong></a>&nbsp;  <a href="https://mail.google.com/" >Gmail</a>&nbsp; <a href="https://www.google.com/reader" >Reader</a>&nbsp; <a href="https://mail.qq.com"/>&nbsp; 
+	<div id="Root"><div style="float: right"><a href="http://www.yebin.info/" title="首页"><strong>Home</strong></a>&nbsp;  <a href="https://mail.google.com/" >Gmail</a>&nbsp; <a href="https://www.google.com/reader" >Reader</a>&nbsp; <a href="https://mail.qq.com"/>QQ Mail</a>&nbsp; 
 
 		<strong style="color: #999">导航页</strong>
 		<div class="sep"></div>
