add navigator page

--- a/start.htm
+++ b/start.htm
@@ -7,7 +7,7 @@ description: 全科医学团队上网导航
 ---
 
 <!DOCTYPE html>
-<html lang="zh-CN">
+<<html lang="zh-CN">
 @charset "utf-8"
 
 /*
@@ -20,7 +20,7 @@ description: 全科医学团队上网导航
 	
 	The best way to wipe IE6 from this planet is to forget it all since the beginning of your every new project.
 */
-
+<style type="text/css">
 html {
 	height: 100%;
 }
@@ -152,6 +152,7 @@ ul.nav li {
 
 .normal.button { background-color: #fff; color: #333; text-shadow: 0px 1px 1px #fff; text-decoration: none; font-weight: bold; }
 .normal.button:hover { background-color: #f0f0f0; color: #333; text-shadow: 0px 1px 1px #fff; text-decoration: none; text-decoration: none; font-weight: bold; cursor: pointer; }
+</style>
 <body>
 	<div id="Root"><div style="float: right"><a href="http://www.yebin.info/" title="首页"><strong>Home</strong></a>&nbsp;  <a href="https://mail.google.com/" >Gmail</a>&nbsp; <a href="https://www.google.com/reader" >Reader</a>&nbsp; <a href="https://mail.qq.com"/>QQ Mail</a>&nbsp; 
 
