--- a/start.htm
+++ b/start.htm
@@ -8,7 +8,7 @@ description: 全科医学团队上网导航
 
 <!DOCTYPE html>
 <<html lang="zh-CN">
-@charset "utf-8"
+<style type="text/css">@charset "utf-8"
 
 /*
 	V2EX Start Page CSS
@@ -20,7 +20,7 @@ description: 全科医学团队上网导航
 	
 	The best way to wipe IE6 from this planet is to forget it all since the beginning of your every new project.
 */
-<style type="text/css">
+
 html {
 	height: 100%;
 }
