--- a/404.html
+++ b/404.html
@@ -5,6 +5,9 @@
 <meta name="author" content="Ye Bin" />
 <meta name="keywords" content="404: not found" />
 <title>404: Not Found</title>
+<link rel="author" href="https://plus.google.com/u/0/111730946330475204627" />
+<link rel="shortcut icon" href="/images/favicon.ico" />
+</head>
 <body>
 <h2>404: Not Found</h2>
 <h3>Oops, the page you want is not available.</h3>
