--- a/start.htm
+++ b/start.htm
@@ -16,7 +16,15 @@
 </head>
 
 <body>
-	<div id="Root"><div style="float: right"><a href="http://www.yebin.info/" title="首页"><strong>Home</strong></a>&nbsp;  <a href="https://mail.google.com/" >Gmail</a>&nbsp; <a href="https://www.google.com/reader" >Reader</a>&nbsp; <a href="https://mail.qq.com"/>QQ Mail</a>&nbsp; 
+	
+<div id="Root">
+	<div style="float: right">
+	<a href="http://www.yebin.info/" title="首页">
+	<strong>Home</strong></a>&nbsp;  
+	<a href="https://mail.google.com/" >Gmail</a>&nbsp; 
+	<a href="https://www.google.com/reader" >Reader</a>&nbsp; 
+	<a href="https://mail.qq.com"/>QQ Mail</a>&nbsp; 
+	</div>
 
 		<strong style="color: #999">导航页</strong>
 		<div class="sep"></div>
@@ -105,6 +113,7 @@
 			</ul>
 		</div>
 		<div class="clear"></div>
+	</div>
 	</div>
 	<div id="Bottom">&copy; 2010 OLIVIDA - making things easier<br />Powered by Google App Engine</div>
 
