--- a/start.html
+++ b/start.html
@@ -9,7 +9,7 @@
 
 	<title>V2EX Start Page</title>
 
-	<link rel="stylesheet" type="text/css" media="screen"  href="/start/style.css" />
+	<link rel="stylesheet" type="text/css" media="screen"  href="http://www.v2ex.com/start/style.css" />
 
 	<link rel="shortcut icon" href="http://start.olivida.com/static/img/favicon.ico" />
 
