--- a/start.html
+++ b/start.html
@@ -24,7 +24,7 @@
 
 
 
-		<strong style="color: #999"><img src="http://start.olivida.com/static/img/icon.png" align="absmiddle" style="margin-top: -4px;" /> V2EX Start Page</strong>
+		<strong style="color: #999"><img src="http://start.olivida.com/static/img/icon.png" align="absmiddle" style="margin-top: -4px;" /> Start Page</strong>
 
 		<div class="sep"></div>
 
@@ -46,33 +46,13 @@
 
 		<div class="column">
 
-			<div class="column_title">MOST VISITED</div>
+			<div class="column_title">å·¥ä½œä¸‹è½½</div>
 
 			<ul class="nav">
 
-				<li><a href="http://www.pandora.com/" >Pandora</a></li>
-
-				<li><a href="http://www.github.com/" >GitHub</a></li>
-
-
-
-                <li><a href="http://www.google.com/" >Google</a></li>
-
-				<li><a href="http://www.techmeme.com/" >Techmeme</a></li>
-
-				<li><a href="http://hg.io/" >hg.io</a></li>
-
-				<li><a href="http://www.youtube.com/" >YouTube</a></li>
-
-				<li><a href="http://olivida.basecamphq.com/" >Basecamp</a></li>
-
-                <li><a href="http://www.vimeo.com/" >Vimeo</a></li>
-
-
-
-                <li><a href="http://www.imdb.com/" >IMDB</a></li>
-
-				<li><a href="http://www.bfbcs.com/" ><strong>BFBCS</strong></a></li>
+				<ul class="nav">
+				<li><a href="http://goo.gl/0mt5z" >å¿ƒç†å«ç”Ÿç£å¯¼æ–‡ä¹¦.doc</a></li>
+				<li><a href="http://goo.gl/Zl9fy" >ç»“æ ¸ç—…æ§åˆ¶é¡¹ç›®äºŒçº§ç£å¯¼æ–‡ä¹¦.doc</a></li>
 
 			</ul>
 
@@ -80,72 +60,45 @@
 
 		<div class="column">
 
-			<div class="column_title">CHINESE</div>
+			<div class="column_title">Health</div>
 
 			<ul class="nav">
 
+				<li><a href="http://songshuhui.net/" >ç§‘å­¦æ¾é¼ ä¼š</a></li>
+				<li><a href="http://www.guokr.com/" >æœå£³ç½‘</a></li>
+				<li><a href="http://www.dxy.cn/" >ä¸é¦™å›­</a></li>
+				<li><a href="http://www.webmd.com/news/default.htm" >WebMD News</a></li>
+			</ul>
 
 
-				<li><a href="http://www.mtime.com/" >Ê±¹â</a></li>
 
-				<li><a href="http://www.youku.com/" >ÓÅ¿á</a></li>
+		</div>
 
-				<li><a href="http://www.renren.com/" >ÈËÈË</a></li>
+		<div class="column">
 
-				<li><a href="http://news.sina.com.cn/" >ĞÂÀËĞÂÎÅ</a></li>
+			<div class="column_title">Allies</div>
 
-				<li><a href="http://www.ifeng.com/" >·ï»ËÍø</a></li>
+			<ul class="nav">
 
-				<li><a href="http://news.qq.com/" >QQ ĞÂÎÅ</a></li>
-
+				<ul class="nav">
+				<li><a href="http://www.gpsouth.com.au/" >GP South</a></li>
+								<li><a href="http://www.gpline.cn/">æ·±åœ³å®¶åº­åŒ»ç”Ÿç½‘</a></li>
 			</ul>
 
 		</div>
 
 		<div class="column">
 
-			<div class="column_title">GEEK</div>
+			<div class="column_title">Online Tools</div>
 
-			<ul class="nav">
-
-				<li><a href="http://news.mydrivers.com/blog/" >Çı¶¯Ö®¼Ò</a></li>
-
-
-
-				<li><a href="http://www.lifehacker.com/" >Lifehacker</a></li>
-
-				<li><a href="http://www.engadget.com/" >Engadget</a></li>
-
-				<li><a href="http://www.wired.com/gadgetlab/" >Gadget Lab</a></li>
-
-				<li><a href="http://www.tektalk.org/" >ÍäÇúÆÀÂÛ</a></li>
-
-
-
-				<li><a href="http://www.usesthis.com/" >The Setup</a></li>
-
-			</ul>
-
-		</div>
-
-		<div class="column">
-
-			<div class="column_title">TWITTER</div>
-
-			<ul class="nav">
-
-				<li><a href="http://www.twitter.com/" >Twitter</a></li>
-
-
-
-				<li><a href="http://apiwiki.twitter.com/" >Twitter API Wiki</a></li>
-
-				<li><a href="http://www.cotweet.com/" >CoTweet</a></li>
-
-				<li><a href="http://www.brizzly.com/" >Brizzly</a></li>
-
-				<li><a href="http://t.sina.com.cn/" >ĞÂÀËÎ¢²©</a></li>
-
+<ul class="nav">
+				<li><a href="http://www.todoist.com/" >Todoist</a></li>
+				<li><a href="https://www.google.com/calendar/" >Calendar</a></li>
+				<li><a href="https://trello.com/" >Trello</a></li>
+				<li><a href="https://webim.feixin.10086.cn/">Feixin</a></li>
+				<li><a href="https://startpage.com/">Start Web Search</a></li>
+				<li><a href="http://pixlr.com/editor/">Photo Editor Online</a></li>
+				<li><a href="http://unshorten.com/">Unshorten</a></li>
 			</ul>
 
 		</div>
@@ -154,27 +107,12 @@
 
 
 
-			<div class="column_title">SOFTWARE</div>
-
+<div class="column_title">å¥åº·ä¿¡æ¯ç½‘ç»œå¹³å°</div>
 			<ul class="nav">
-
-			    <li><a href="http://lixian.vip.xunlei.com/" >Ñ¸À×ÀëÏß</a></li>
-
-				<li><a href="http://www.google.com/chrome/" >Google Chrome</a></li>
-
-				<li><a href="http://www.getfirefox.com/" >Mozilla Firefox</a></li>
-
-				<li><a href="http://pc.qq.com/" >QQ Èí¼ş</a></li>
-
-
-
-				<li><a href="http://www.splayer.org/" >ÉäÊÖ²¥·ÅÆ÷</a></li>
-
-				<li><a href="http://pinyin.sogou.com/" >ËÑ¹·ÊäÈë·¨</a></li>
-
+				<li><a href="http://szjf.8800.org/" >ç²¾ç¥ç–¾ç—…ç¤¾åŒºé˜²æ²»åº·å¤ä¿¡æ¯ç®¡ç†ç³»ç»Ÿ Ver 3.5 ç½‘ç»œç‰ˆ</a></li>
+				<li><a href="http://218.18.233.230:8888/" >æ·±åœ³å¸‚å¦‡å¹¼ä¿å¥ä¿¡æ¯ç®¡ç†ç³»ç»Ÿ</a></li>
+				<li><a href="http://218.18.233.234:9080/PHMIS1/" >æ·±åœ³å¸‚æ…¢ç—…ç®¡ç†ç³»ç»Ÿ</a></li>
 			</ul>
-
-		</div>
 
 		<div class="column">
 
@@ -370,9 +308,9 @@
 
 			<ul class="nav">
 
-				<li><a href="http://v.6.cn/" >Áù¼ä·¿Ğã³¡</a></li>
+				<li><a href="http://v.6.cn/" >å…­é—´æˆ¿ç§€åœº</a></li>
 
-				<li><a href="http://www.appletuan.com/" >Æ»¹ûÍÅ</a></li>
+				<li><a href="http://www.appletuan.com/" >è‹¹æœå›¢</a></li>
 
 				<li><a href="http://www.dbanotes.net/" >DBA Notes</a></li>
 
@@ -380,7 +318,7 @@
 
 				<li><a href="http://angelcrunch.com/" >AngelCrunch</a></li>
 
-				<li><a href="http://tisiwi.com/" >ÌìÊ¹Íå</a></li>
+				<li><a href="http://tisiwi.com/" >å¤©ä½¿æ¹¾</a></li>
 
 			</ul>
 
@@ -400,7 +338,7 @@
 
 				<li><a href="http://www.empireonline.com/" >Empire</a></li>
 
-				<li><a href="http://www.xiami.com/" >ÏºÃ×</a></li>
+				<li><a href="http://www.xiami.com/" >è™¾ç±³</a></li>
 
 				<li><a href="http://www.last.fm/" >Last.fm</a></li>
 
@@ -556,17 +494,17 @@
 
 			<ul class="nav">
 
-				<li><a href="http://www.newegg.com.cn/" >ĞÂµ°</a></li>
+				<li><a href="http://www.newegg.com.cn/" >æ–°è›‹</a></li>
 
-				<li><a href="http://www.360buy.com/" >¾©¶«</a></li>
+				<li><a href="http://www.360buy.com/" >äº¬ä¸œ</a></li>
 
-				<li><a href="http://www.taobao.com/" >ÌÔ±¦</a></li>
+				<li><a href="http://www.taobao.com/" >æ·˜å®</a></li>
 
-				<li><a href="http://www.alipay.com/" >Ö§¸¶±¦</a></li>
+				<li><a href="http://www.alipay.com/" >æ”¯ä»˜å®</a></li>
 
 
 
-				<li><a href="http://www.10010.com/" >ÁªÍ¨</a></li>
+				<li><a href="http://www.10010.com/" >è”é€š</a></li>
 
 			</ul>
 
