--- a/start.html
+++ b/start.html
@@ -105,6 +105,18 @@
 
 		
 		<div class="clear"></div>
+		
+<div class="clear"></div>
+
+				<div class="sep"></div>
+				<div class="column">
+			<div class="column_title">健康信息网络平台</div>
+			<ul class="nav">
+				<li><a href="http://szjf.8800.org/" >精神疾病社区防治康复信息管理系统 Ver 3.5 网络版</a></li>
+				<li><a href="http://218.18.233.230:8888/" >深圳市妇幼保健信息管理系统</a></li>
+				<li><a href="http://218.18.233.234:9080/PHMIS1/" >深圳市慢病管理系统</a></li>
+			</ul>
+		</div>
 
 	</div>
 
