--- a/start.htm
+++ b/start.htm
@@ -7,12 +7,13 @@
 
 	<meta charset="UTF-8" />
 	<Meta name="author" content="livid.v2ex.com"/>
-	
-	<title>导航页</title>
+	<Meta name="description" content="全科医生和社区护士的上网导航"/>
+	<title>上网导航</title>
 	<link rel="author" href="https://plus.google.com/u/0/111730946330475204627" />
 	<link rel="stylesheet" type="text/css" media="screen"  href="http://www.v2ex.com/start/style.css" />
 	<link rel="shortcut icon" href="/images/favicon.ico" />
 
+	
 </head>
 
 <body>
@@ -26,7 +27,7 @@
 	<a href="https://mail.qq.com"/>QQ Mail</a>&nbsp; 
 	</div>
 
-		<strong style="color: #999">导航页</strong>
+		<strong style="color: #999">上网导航</strong>
 		<div class="sep"></div>
 		<form  method="get" action="http://www.google.com/search">
 		<input type="hidden" name="forid" value="1" />
