--- a/start.htm
+++ b/start.htm
@@ -29,7 +29,7 @@
 
 		<strong style="color: #999">上网导航</strong>
 		<div class="sep"></div>
-		<form  method="get" action="http://www.google.com/search">
+		<form  method="get" action="https://www.google.com/search">
 		<input type="hidden" name="forid" value="1" />
 		<input type="hidden" name="ie" value="UTF-8" />
 		<input type="hidden" name="hl" value="en-US" />
@@ -42,7 +42,7 @@
 			<ul class="nav">
 				<li><a href="http://goo.gl/0mt5z" >心理卫生督导文书.doc</a></li>
 				<li><a href="http://goo.gl/Zl9fy" >结核病控制项目二级督导文书.doc</a></li>
-				<li><a href="http://www.gpline.cn/">深圳家庭医生网</a></li>
+
 			</ul>
 		</div>
 		<div class="column">
@@ -58,7 +58,8 @@
 		<div class="column">
 			<div class="column_title">Allies</div>
 			<ul class="nav">
-				<li><a href="http://www.gpsouth.com.au/" >GP South</a></li>
+				<li><a href="http://www.gpsouth.com.au/" title="Tasmania 全科医师组织">GP South</a></li>
+				<li><a href="http://www.gpline.cn/">深圳家庭医生网</a></li>
 			</ul>
 		</div>
 		<div class="column">
@@ -74,12 +75,12 @@
 		<div class="column">
 			<div class="column_title">Online Tools</div>
 			<ul class="nav">
-				<li><a href="http://www.todoist.com/" >Todoist</a></li>
-				<li><a href="https://www.google.com/calendar/" >Calendar</a></li>
-				<li><a href="https://trello.com/" >Trello</a></li>
-				<li><a href="https://webim.feixin.10086.cn/">Feixin</a></li>
+				<li><a href="http://www.todoist.com/" title="Todoist是领先的个人任务管理器，它实用、快速、简单">Todoist</a></li>
+				<li><a href="https://www.google.com/calendar/" title="整理您的日程安排并与朋友共享活动">Calendar</a></li>
+				<li><a href="https://trello.com/" title="提供简洁清晰的团队协作工具">Trello</a></li>
+				<li><a href="https://webim.feixin.10086.cn/" title="让你的消息传遍中国移动用户">Feixin</a></li>
 				<li><a href="https://startpage.com/">Start Web Search</a></li>
-				<li><a href="http://pixlr.com/editor/">Photo Editor Online</a></li>
+				<li><a href="http://pixlr.com/editor/" title="缩小，遮挡你的图片">Photo Editor Online</a></li>
 				<li><a href="http://unshorten.com/">Unshorten</a></li>
 			</ul>
 		</div>
