--- a/start.htm
+++ b/start.htm
@@ -110,7 +110,7 @@
 		</div>
 
 		<div class="clear"></div>
-
+</div>
 	
 	<div id="Bottom">&copy; 2010 OLIVIDA - making things easier<br />Powered by Google App Engine</div>
 
