--- a/start.htm
+++ b/start.htm
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8" />
 	<Meta name="author" content="livid.v2ex.com"/>
 	<Meta name="description" content="全科医生和社区护士的上网导航"/>
-	<title>上网导航</title>
+	<title>全科医生上网导航</title>
 	<link rel="author" href="https://plus.google.com/u/0/111730946330475204627" />
 	<link rel="stylesheet" type="text/css" media="screen"  href="http://www.v2ex.com/start/style.css" />
 	<link rel="shortcut icon" href="/images/favicon.ico" />
@@ -24,10 +24,11 @@
 	<strong>Home</strong></a>&nbsp;  
 	<a href="https://mail.google.com/" >Gmail</a>&nbsp; 
 	<a href="https://www.google.com/reader" >Reader</a>&nbsp; 
-	<a href="https://mail.qq.com"/>QQ Mail</a>&nbsp; 
+	<a href="https://mail.qq.com"/>QQMail</a>&nbsp; 
+	<a href="http://v2ex.com/">V2EX</a>
 	</div>
 
-		<strong style="color: #999">上网导航</strong>
+		<strong style="color: #999">全科医生上网导航</strong>
 		<div class="sep"></div>
 		<form  method="get" action="https://www.google.com/search">
 		<input type="hidden" name="forid" value="1" />
