--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 	#Index ul li{position:relative; zoom:1; float:left; list-style:none; width:320px; padding-right:20px; border-left:1px dotted #ccc;}
 	#Index ul li:first-child{border-left:0;}
 	#Index ul li:last-child{}
-	#Index #Left{border-top-color:#06c;}
-	#Index #Right{border-top-color:#53bd1a;}
-	#Index div.item-icon{position:absolute; left:10px; top:0;}
+	#Index #Left{border-top-color:#06c;float:left;}
+	#Index #Right{border-top-color:#53bd1a;float:right}
 	#Index div.content-block{margin-left:85px;}
-	#Index h3{margin-bottom:10px; font-size:85%;}
+	#Index h3{margin-bottom:10px; font-size:100%;}
 	#Index h3 a{color:#666;}
 	#Index h3 a:hover{color:#000;}
 	#Index div.content-block p{margin:10px 0; font-size:75%; line-height:1.6em;}
@@ -74,7 +73,8 @@
 </ul>
 
 
-</div><!-- End Page -->
+</div>
+<!-- End Page -->
 
 
   
