--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
    <link rel="stylesheet" href="/assets/themes/mark-reid/css/screen.css" type="text/css" />
  
  <style type="text/css">
-	#Index ul{width:100%;}
+	#Index ul{width:100%;position:relative;}
 	#Index ul:after{display:block; clear:both; content:'.'; height:0; overflow:hidden; visibility:hidden;}
-	#Index ul li{position:relative; zoom:1; float:left; list-style:none; width:320px; padding-right:20px; border-left:1px dotted #ccc;}
 	#Index ul li:first-child{border-left:0;}
 	#Index ul li:last-child{}
 	#Index #Left{border-top-color:#06c;float:left;}
