--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
    <link rel="stylesheet" href="/assets/themes/mark-reid/css/screen.css" type="text/css" />
  
  <style type="text/css">
-	#Index ul{width:100%;position:relative;}
+	#Index ul{width:100%;position:relative;list-style:none; }
 	#Index ul:after{display:block; clear:both; content:'.'; height:0; overflow:hidden; visibility:hidden;}
 	#Index ul li:first-child{border-left:0;}
 	#Index ul li:last-child{}
-	#Index #Left{border-top-color:#06c;float:left;}
-	#Index #Right{border-top-color:#53bd1a;float:right}
-	#Index div.content-block{margin-left:85px;}
+	#Index #Left{border-top-color:#06c;float:left;width:30%;}
+	#Index #Right{border-top-color:#53bd1a;float:right;width:70%;}
+	#Index div.content-block{margin-left:0px;}
 	#Index h3{margin-bottom:10px; font-size:100%;}
 	#Index h3 a{color:#666;}
 	#Index h3 a:hover{color:#000;}
