--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 	#Index ul li:first-child{border-left:0;}
 	#Index ul li:last-child{}
 	#Index #Left{border-top-color:#06c;float:left;}
-	#Index #Right{margin-left:20px;border-top-color:#53bd1a;}
+	#Index #Right{margin-left:20px;border-top-color:#53bd1a;float:right;}
 	#Index div.content-block{margin-left:0px;}
 	#Index h3{margin-bottom:10px; font-size:100%;}
 	#Index h3 a{color:#666;}
 	#Index h3 a:hover{color:#000;}
-	#Index div.content-block p{margin:10px 0; font-size:75%; line-height:1.6em;}
+	#Index div.content-block p{margin:10px 0; font-size:100%; line-height:1.6em;}
 </style>
 </head>
 <body id="">
