--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <link rel="stylesheet" href="/assets/themes/mark-reid/css/screen.css" type="text/css" />
  
  <style type="text/css">
-	#Index ul{width:100%;position:relative;list-style:none; font-size:16px;}
+	#Index ul{width:100%;position:relative;list-style:none;}
 	#Index ul:after{display:block; clear:both; content:'.'; height:0; overflow:hidden; visibility:hidden;}
 	#Index ul li:first-child{border-left:0;}
 	#Index ul li:last-child{}
