--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	#Index ul:after{display:block; clear:both; content:'.'; height:0; overflow:hidden; visibility:hidden;}
 	#Index ul li:first-child{border-left:0;}
 	#Index ul li:last-child{}
-	#Index #Left{border-top-color:#06c;float:left;}
-	#Index #Right{margin-left:20px;border-top-color:#53bd1a;float:right;width:70%;}
+	#Index #Left{border-top-color:#06c;float:left;width:50%;}
+	#Index #Right{margin-left:20px;border-top-color:#53bd1a;float:right;}
 	#Index div.content-block{margin-left:0px;}
 	#Index h3{margin-bottom:10px; font-size:100%;}
 	#Index h3 a{color:#666;}
