--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	#Index ul:after{display:block; clear:both; content:'.'; height:0; overflow:hidden; visibility:hidden;}
 	#Index ul li:first-child{border-left:0;}
 	#Index ul li:last-child{}
-	#Index #Left{border-top-color:#06c;width:50%;}
+	#Index #Left{border-top-color:#06c;}
 	#Index #Right{margin-left:20px;border-top-color:#53bd1a;}
 	#Index div.content-block{margin-left:0px;}
 	#Index h3{margin-bottom:10px; font-size:100%;}
