--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <style type="text/css">
 	#Index ul{width:100%;}
 	#Index ul:after{display:block; clear:both; content:'.'; height:0; overflow:hidden; visibility:hidden;}
-	#Index ul li{position:relative; zoom:1; float:left; list-style:none; width:320px; padding-right:20px; border-left:1px dotted #ccc;}
+	#Index ul li{position:relative; zoom:1; float:left; list-style:none; width:50%; padding-right:20px; border-left:1px dotted #ccc;}
 	#Index ul li:first-child{border-left:0;}
 	#Index ul li:last-child{}
 	#Index #Left{border-top-color:#06c;}
