--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	#Index ul li:first-child{border-left:0;}
 	#Index ul li:last-child{}
 	#Index #Left{border-top-color:#06c;}
-	#Index #Right{margin-left:20px;border-top-color:#53bd1a;}
+	#Index #Right{padding-left:20px;border-top-color:#53bd1a;}
 	#Index div.content-block{margin-left:0px;}
 	#Index h3{margin-bottom:10px; font-size:100%;}
 	#Index h3 a{color:#666;}
