--- a/start.htm
+++ b/start.htm
@@ -39,7 +39,7 @@
 		</form>
 		<div class="sep"></div>
 		<div class="column">
-			<div class="column_title">General Practition</div>
+			<div class="column_title">General Practice</div>
 			<ul class="nav">
 				<li><a href="http://goo.gl/0mt5z" >心理卫生督导文书.doc</a></li>
 				<li><a href="http://goo.gl/Zl9fy" >结核病控制项目二级督导文书.doc</a></li>
