--- a/start.htm
+++ b/start.htm
@@ -43,6 +43,8 @@
 			<ul class="nav">
 				<li><a href="http://goo.gl/0mt5z" >心理卫生督导文书.doc</a></li>
 				<li><a href="http://goo.gl/Zl9fy" >结核病控制项目二级督导文书.doc</a></li>
+				<li><a href="http://support.google.com/blogger/bin/answer.py?hl=zh-Hans&answer=42070">Blogger.com 传统模板标记列表
+</a></li>
 
 			</ul>
 		</div>
