update navigator bar

--- a/start.htm
+++ b/start.htm
@@ -20,7 +20,7 @@
 	
 <div id="Root">
 	<div style="float: right">
-	<a href="http://www.yebin.info/" title="首页">
+	<a href="http://yebin.github.com/" title="首页">
 	<strong>Home</strong></a>&nbsp;  
 	<a href="https://mail.google.com/" >Gmail</a>&nbsp; 
 	<a href="https://www.google.com/reader" >Reader</a>&nbsp; 
