--- a/tags.html
+++ b/tags.html
@@ -4,7 +4,11 @@ title: Tags
 header: Posts By Tag
 group: navigation
 description: samuel bīn YÈ 日志关键词汇总
+<meta name="robots" content="{{ page.meta-robots }}" />
+<meta name="description" content="{{ page.meta-description }}" />
 ---
+
+
 {% include JB/setup %}
 <ul class="tag_box inline">
   {% assign tags_list = site.tags %}  
