--- a/posts.html
+++ b/posts.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title : Archive
-header : Post Archives
+title : Posts Archive
+header : Posts Archive
 group: navigation
-description: Archievs
+description: Posts Archive
 ---
 {% include JB/setup %}
 {% assign posts_collate = site.posts %}
